--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,10 @@
 0.7dev:
+    * Use requests to make HTTP requests (Adrian Sampson & Wieland Hoffmann)
+
+      Note that this changes the exception types of the `cause` attribute of
+      musicbrainzngs.musicbrainz.WebServiceError and its subclasses to instances
+      of requests.exceptions.RequestException and its subclasses.
+
 
 0.6 (2016-04-11):
     * don't require authentication when getting public collections (#87)
